--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     <section class="main-image bg-secondary mb-4"
         >
         <div class="container-fluid " style=" background: url('img/main-image.jpg') no-repeat; background-size: cover; height: 50rem;">
-            <div class="row mb-5 d-flex justify-content-center ">
-                <div class="col-6 align-items-center mt-5 ">
+            <div class="row   d-flex justify-content-center ">
+                <div class="col-6 text-center align-items-center  position-absolute top-100 start-50 translate-middle mb-5">
                     <!--Titre-->
                     <p  >
-                        <h1 style="color: #fff; font-family: Arial, Helvetica, sans-serif; font-size: 5rem;">Savourez de la bonne cuisine chez nous.</h1>
+                        <h1 style="color: green; font-weight: bold; font-family: Arial, Helvetica, sans-serif; font-size: 5rem;">Savourez de la bonne cuisine chez nous.</h1>
                     </p>
-                    <button class="btn btn-primary" type="button">commandez ici!</button>
+                    <button class="btn btn-primary fw-bold" type="button">Commandez ici!</button>
                 </div>
 
             </div>
