--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
     </section>
     <!--Footer-->
-    <footer>
+    <footer class="bg-secondary"> 
         <div class="container">
             <div class="row justify-content-center">
                 <h4>Anick <span>.</span>D</h4>
