--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                       <a class="nav-link text-black fw-bold" href="#menu">Menu</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-black fw-bold " href="#About">About us</a>
+                      <a class="nav-link text-black fw-bold " href="#aw                       bout">About us</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-black fw-bold" href="#contact">Contact</a>
@@ -53,13 +53,13 @@
         </div>
     </section>
     <!--MENUS-->
-    <section class="menu mb-5">
+    <section class="menu mb-5" id="menu">
         <div class="container">
             <div class="row mb-5 d-flex justify-content-center align-items-center">
                 <h1 class="fw-bold text-center fs-1 border-bottom border-success" style="font-family: Arial, Helvetica, sans-serif; color: orangered;">Our menu</h1>
             </div>
             <div class="row justify-content-center me-2">
-                <div class="col-3 col-sm-12 col-md-4 col-lg-3 py-1">
+                <div class="col-12 col-md-6 col-sm-12 col-sm-12 col-lg-4 col-xl-3 py-1">
                     <div class="card h-100" style="width: 18rem;">
                         <img src="img/fries_chicken.jpg" class="card-img-top" alt="fries-chicken" style="height: 15rem;">
                         <div class="card-body text-center">
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-4 col-lg-3 py-1">
+                <div class="col-12 col-md-6 col-sm-12 col-lg-4 col-xl-3 py-1">
                     <div class="card" style="width: 18rem;">
                         <img src="img/burger.png" class="card-img-top" alt="fries-chicken" style="height: 15rem;">
                         <div class="card-body text-center">
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-4 col-lg-3 py-1">
+                <div class="col-12 col-md-6 col-sm-12 col-lg-4 col-xl-3 py-1">
                     <div class="card" style="width: 18rem;">
                         <img src="img/pizza.jpg" class="card-img-top" alt="fries-chicken" style="height: 15rem;">
                         <div class="card-body text-center">
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-12 col-md-4 col-lg-3 py-1">
+                <div class="col-12 col-md-6 col-sm-12 col-lg-4 col-xl-3 py-1">
                     <div class="card" style="width: 18rem;">
                         <img src="img/vegetable_soup.jpg" class="card-img-top" alt="fries-chicken" style="height: 15rem;">
                         <div class="card-body text-center">
@@ -131,15 +131,15 @@
         </div>
     </section>
     <!--APROPOS DE NOUS-->
-    <section class="About bg-body-tertiary mt-3 mb-5">
+    <section class="About bg-body-tertiary mt-3 mb-5"  id="about">
         <div class="container">
             <div class="row mb-5 d-flex justify-content-center align-items-center">
                 <h1 class="fw-bold text-center fs-1 border-bottom border-success" style="font-family: Arial, Helvetica, sans-serif; color: orangered;">About us</h1>
             </div>
             <div class="row">
-                <div class="col-6 col-sm-12 col-md-6 col-lg-6 col-xl-6"><img src="img/about_us.jpg" alt="" srcset=""></div>
-                <div class="col-6  col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="row col-12 p-5">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"><img src="img/about_us.jpg" alt="" srcset=""></div>
+                <div class="col-12  col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <div class="row col-sm-12 col-md-6 col-lg-6 col-xl-6 p-5">
                         <h1 class="text-black; fw-bold" style="font-family: arial, sans-serif;">Anick<span style="color: orangered;">.</span> D</h1>
                         <h3 class="fw-bold " style="color: orangered;"><i>Regalez vous avec nos menus très aperitifs!</i></h3>
                         <p>
@@ -160,13 +160,13 @@
         </div>
     </section>
     <!--Contact-->
-    <section class="contact mb-5">
+    <section class="contact mb-5" id="contact">
         <div class="container">
             <div class="row mb-5 d-flex justify-content-center align-items-center">
                 <h1 class="fw-bold text-center fs-1 border-bottom border-success " style="font-family: Arial, Helvetica, sans-serif; color: orangered;">Contact</h1>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-12">
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label fw-bold">Name</label>
                         <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name">
@@ -190,21 +190,21 @@
     <footer class="bg-secondary" style="height: 20vh;">
         <div class="container">
             <div class="row py-5 justify-content-center">
-                <div class="col-3 col-sm-12 col-md-3 col-lg-3">
+                <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
                     <h4 class="text-black; fw-bold" style="font-family: arial, sans-serif;">Anick<span style="color: orangered;">.</span> D</h4>
 
                 </div>
-                <div class="col-3 col-sm-12 col-md-3 col-lg-3">
+                <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
                     <div class="copyright fw-bold text-white">Copyright @ 2025. tous droits revervés.</div>
                 </div>
-                <div class="col-3  col-sm-12 col-md-3 col-lg-3">
+                <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
                     <i class="fab fa-facebook " style="color: #1877F2;"></i>
                     <i class="fab fa-tiktok"></i>
                     <i class="fab fa-instagram" ></i>
                     <i class="fab fa-whatsapp" style="color: #09f79b;"></i>
 
                 </div>
-                <div class="col-3 col-sm-12 col-md-3 col-lg-3">
+                <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3">
                     <a href="#contact" class="nav-link fw-bold fs-5" style="font-family: arial, sans-serif; color: orangered;">Contact</a>
                 </div>
                 
